# Brain_Tumor_CV_project

./: README.md  environment.yml  exploratory.ipynb  pyproject.toml  requirements.txt
.github/workflows/: build_test.yml
data_515_brain_tumor_computer_vision/: .coverage  .coveragerc
data_515_brain_tumor_computer_vision.egg-info/: PKG-INFO  top_level.txt
data_515_brain_tumor_computer_vision/data_515_brain_tumor_computer_vision.egg-info/: SOURCES.txt  requires.txt
data_515_brain_tumor_computer_vision/model_training/: model_building.py  model_building_exploratory.ipynb
data_515_brain_tumor_computer_vision/models/is_scan/: args.yaml  results.csv
data_515_brain_tumor_computer_vision/models/is_tumor/: args.yaml  (+2 more)
data_515_brain_tumor_computer_vision/tests/: test_funcs.py  test_model_building.py  test_streamlit.py
data_515_brain_tumor_computer_vision/ui_demo/: .coverage  Brain_Tumor_Information.py  pyproject.toml  style.py
detection_model/: Explore_model.ipynb  args.yaml  results.csv
docs/: Component_Specification.md  Functional_Specification.md  Milestones.md  users.md  users_usecase.md
models/is_scan/: events.out.tfevents.1708904730.DESKTOP-PNA274M.44212.1
models/locate_tumor_2/: results.csv
streamlit_UI/: README.md
tests/: test_funcs.py  test_streamlit.py
train4/: results.csv
ui_demo/: Brain Tumor Information.py  Brain_Tumor_Information.py  entry.py  environment.yml  page1.py  page2.py  page3.py  requirements.txt  style.py
ui_demo/pages/: 1_Brain_Tumor_Prediction.py  2_Chatbot.py  Brain_Tumor_Prediction.py  Chatbot.py  test_chatbot.py
(+49 files in other folders)
