[project]
name = "data_515_brain_tumor_computer_vision"
version = "0.0.1"
authors = [
  { name="Elizabeth Holden" },
  { name="Elliott Sanger" },
  { name="Salah Elbakri" },
  { name="Diane Chiang" },
]
description = "An online website/tool where potential patients can upload their brain scan images and we’ll return the likelihood/severity of the brain tumor. Although that cannot serve as the ultimate truth, we can encourage patients to seek professional help."
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[project.urls]
Homepage = "https://github.com/tchiang0/data_515_brain_tumor_computer_vision"
Issues = "https://github.com/tchiang0/data_515_brain_tumor_computer_vision/issues"